--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Favicon -->
+    <meta name="description" content="Welcome to Digital Maroc Resto">
+    <meta name="keywords" content="Spaghetti Pizza, Ordering,Booking,Gaming, Html, Css,">
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
 </head>
 
